<resources>
    <string name="app_name" translatable="true">Telugu Panchangamu</string>
    <string name="samskaram" translatable="false">నమస్కారం</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="i_agree_to" translatable="false">"I agree to the "</string>
    <string name="menu_terms_condition" translatable="false">Terms &amp; Conditions</string>
    <string name="title_home" translatable="true">Panchangam</string>
    <string name="title_dashboard" translatable="true">Festivals</string>
    <string name="title_notifications" translatable="true">Notifications</string>
    <string name="title_settings" translatable="true">Settings</string>
    <string name="title_others" translatable="true">Others</string>
    <string name="title_panchangam" translatable="false">Panchangam</string>
    <string name="app_name_tel" translatable="false">తెలుగు పంచాంగము</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>

    <string name="settings_desc" translatable="true">By using this setting ,you can change the App features like Change Language..etc.,
in this ,we can also go through the app terms and policies. </string>


    <string name="todo" translatable="false">TODO</string>
    <!--  Actionbar strings   -->
    <string name="action_addEvent" translatable="true">Add Event</string>

    <!--   addEvent Strings  -->
    <string name="events" translatable="true">EVENTS</string>
    <string name="event" translatable="true">Event</string>
    <string name="birthday" translatable="true">Birthday</string>
    <string name="anniversary" translatable="true">Anniversary</string>
    <string name="selectTime" translatable="true">Select Time:</string>
    <string name="dateTitle" translatable="true">Date:- </string>
    <string name="event_name" translatable="true">Enter Name</string>
    <string name="event_time1" translatable="false">Enter Time </string>
    <string name="event_time" translatable="false">10:25 AM </string>
    <string name="description" translatable="true">Description: </string>
    <string name="save_event" translatable="true">Save Event</string>
    <string name="update_event" translatable="true">Update Event</string>

    <!--  eventData strings -->
    <string name="name" translatable="true">Name: </string>
    <string name="time" translatable="true">Time: </string>
    <string name="eventType" translatable="true">Event Type: </string>

    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>

    <string name="nodatafound" translatable="true">No Data Found?..</string>

    <!--    week Names-->
    <string name="sun" translatable="true">Su</string>
    <string name="mon" translatable="true">M</string>
    <string name="tue" translatable="true">Tu</string>
    <string name="wed" translatable="true">W</string>
    <string name="thu" translatable="true">Th</string>
    <string name="fri" translatable="true">F</string>
    <string name="sat" translatable="true">Sa</string>
    <string name="previoues_month_but" translatable="false">previouesmonth</string>

    <!--  panchangamItem strings  -->
    <string name="panch_title" translatable="true">Panchangam:</string>
    <string name="tithi" translatable="true">Tithi:</string>
    <string name="nakshatram" translatable="true">Nakshatram:</string>
    <string name="yogam" translatable="true">Yogam:</string>
    <string name="karan" translatable="true">Karan:</string>
    <string name="surya_gamanam" translatable="true">Surya Gamanam:</string>
    <string name="sunrise" translatable="true">Sunrise:</string>
    <string name="sunset" translatable="true">Sunset:</string>
    <string name="brahma_muhurt" translatable="true">BrahmaMuhurt:</string>
    <string name="yamagandam" translatable="true">Yamagandam:</string>
    <string name="rahuKalam" translatable="true">RahuKalam:</string>
    <string name="durmuhurtham" translatable="true">Durmuhurtham:</string>
    <string name="varjam" translatable="true">Varjam:</string>
    <string name="amritKalam" translatable="true">AmritKalam:</string>
    <string name="abhijitMuhurt" translatable="true">AbhijitMuhurt:</string>
    <string name="gulikaKalam" translatable="true">GulikaKalam:</string>
    <string name="festival" translatable="true">Festival:</string>
    <string name="note" translatable="true">Note: "+" Means Next Day</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="oops" translatable="false">Oops!</string>
    <string name="no_data_found" translatable="false">No Data found</string>
    <string name="next_month_but" translatable="false">next_month_but</string>
    <string name="shareapp" translatable="false">ShareApp</string>
    <string name="share_data_app" translatable="false">ShareData</string>
    <string name="more_apps" translatable="false">MoreApps</string>
    <string name="contact_us" translatable="false">Contact Us</string>
    <string name="rate_us" translatable="false">Rate Us</string>
    <string name="app_version" translatable="false">App Version</string>
</resources>