<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notification_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/linear_notify_no_data"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/thirtyfive_sp"
            android:padding="@dimen/four_dp"
            android:textStyle="bold"
            android:text="@string/oops"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/eighteen_sp"
            android:padding="@dimen/four_dp"
            android:text="@string/no_data_found"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>