<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_fifty_dp"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@drawable/app_icon_om" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name_tel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <!-- Checkbox for accepting Terms and Conditions -->
    <!-- Container for CheckBox and TextView -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/privacy_textview"
        android:layout_marginBottom="@dimen/eight_dp">

        <CheckBox
            android:id="@+id/termsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/i_agree_to"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/termstextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/termsCheckbox"
            android:layout_centerVertical="true"
            android:text="@string/menu_terms_condition"
            android:textStyle="bold"
            android:focusable="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/privacy_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="auto"
        android:onClick="openTermsAndConditions" />
</RelativeLayout>