<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include"
        layout="@layout/panch_items" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/brahma_muhurt"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/brahmaMuhurt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/yamagandam"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/yamagandam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/rahuKalam"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/rahuKalam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/durmuhurtham"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/durmuhurtham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/varjam"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/varjam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/amritKalam"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/amritKalam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/abhijitMuhurt"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/abhijitMuhurt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/panch_title"
            android:padding="@dimen/five_dp"
            android:paddingStart="@dimen/twenty_dp"
            android:text="@string/gulikaKalam"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/gulikaKalam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700"/>

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp" />

    </LinearLayout>

</LinearLayout>