<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.settings.fragment_settings"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/rate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@drawable/button_shap"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/twenty_dp"
            android:textSize="@dimen/font_sp"
            app:iconPadding="@dimen/twenty_dp"
            app:icon="@drawable/rate_us"
            app:iconGravity="textStart"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@drawable/button_shap"
            android:text="@string/shareapp"
            android:textAllCaps="false"
            android:textSize="@dimen/font_sp"
            app:cornerRadius="@dimen/twenty_dp"
            app:icon="@drawable/share"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/twenty_dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/screenshot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@drawable/button_shap"
            android:text="@string/share_data_app"
            android:textAllCaps="false"
            android:textSize="@dimen/font_sp"
            app:cornerRadius="@dimen/twenty_dp"
            app:icon="@drawable/share"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/twenty_dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/forty_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/versions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="@dimen/sixteen_sp"

            />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/purple_500"
            android:layout_marginStart="@dimen/four_dp"
            android:textSize="@dimen/sixteen_sp"
            />
    </LinearLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>